# fts-mecab-rs

./: Cargo.toml  build.rs  wrapper.h
src/: ffi.rs  lib.rs
