[package]
name = "fts-mecab-rs"
description = "FTS5 MeCab Tokenizer"
authors = ["Satoru Sukawa <sukawasatoru.github@outlook.jp>"]
homepage = "https://github.com/sukawasatoru/fts-mecab-rs"
repository = "https://github.com/sukawasatoru/fts-mecab-rs.git"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
bindgen = "=0.65.1"
pkg-config = "=0.3.26"

[dependencies]
libc = "=0.2.142"
tracing = "=0.1.38"
tracing-subscriber = "=0.3.17"

[features]
default = ["tracing-subscriber"]
tracing-subscriber = []
